<resources>
    <string name="app_name">199 countries</string>

    <string name="googleMaps_api_key">AIzaSyBu4ITXxbdpqq2FuQkJnTjKXNyE6kx_lvw</string>

    <string name="version">version 0.1</string>
    <string name="select_your_country">choose your citizenship</string>
    <string name="change_your_country">change your citizenship</string>
    <string name="submit">start</string>
    <string name="no_internet">no internet connection</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="close">Close</string>

    <string name="action_internet">web</string>
    <string name="action_share">share</string>

    <string name="search">searching by country</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_top">Top</string>
    <string name="menu_map">Map</string>
    <string name="menu_info">About</string>
    <string name="menu_compare">Compare</string>

    <string name="total">total score</string>

    <string name="visa_free">visa-free</string>
    <string name="visa_required">visa required</string>
    <string name="on_arrival">visa on arrival</string>
    <string name="eTA">eTA</string>

    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>

    <string name="change_region">Do you want to change your citizenship ?</string>

    <string name="about_app">Total score means sum of "visa free"\n
       "eTa" and "visa on arrival" countries.\n
        eTa - means Electronic Travel Authorization.</string>
    <string name="api_url">This application uses<a href="https://github.com/ilyankou/passport-index-dataset"> passport index dataset</a></string>
    <string name="day_mode_is_on">day mode is on</string>
    <string name="location_rationale">Share your location to determine your citizenship</string>
    <string name="proceed_offline">proceed offline</string>
    <string name="dark_mode_on">Dark mode on!</string>
    <string name="dark_mode_off">Dark mode off!</string>
    <string name="error_toast">Error :</string>
    <string name="poor_internet">poor internet connection</string>
    <string name="country_long_blank">United Arab Emirates</string>
    <string name="select_to_compare">choose citizenship to compare</string>
    <string name="country_exists">already present…</string>
    <string name="tutorial">Youtube tutorials</string>

</resources>
