<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/passport"
            android:title="@string/menu_ranking" />
        <item
            android:id="@+id/nav_compare"
            android:icon="@drawable/compare"
            android:title="@string/menu_compare" />
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/rank"
            android:title="@string/menu_top" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/google"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/menu_info" />
    </group>


</menu>
