<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.InfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/logo"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="96dp"
                android:layout_height="96dp" />

            <TextView
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/about"
                android:text="@string/about_app"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/apiUrl"
                android:text="@string/api_url"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>