<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/cardView"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="8dp"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/countryPositionTxt"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/coverImg"
                android:src="@drawable/ic_terrain_black_24dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name" />

            <TextView
                android:textColor="@color/browser_actions_text_color"
                android:textStyle="bold"
                android:id="@+id/countryNameTxt"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="8dp"
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/countryProgress"
                style="@style/MyProgressBar"
                android:layout_gravity="center"
                android:max="199"
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/expand"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/collapse"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_up_black_24dp"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ranking"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/total"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/total"
                    android:textColor="@android:color/holo_green_dark"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/visa_free"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/visa_free"
                    android:textColor="@color/visa_free"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/on_arrival"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/visa_on_arrival"
                    android:textColor="@color/visa_on_arrival"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/eTA"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/eTa"
                    android:textColor="@color/eTa"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/visa_required"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/visaRequiered"
                    android:textColor="@color/visa_requiered"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>