<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Fragments.RankingFragment">

    <RelativeLayout
        android:padding="8dp"
        android:id="@+id/region"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UnusedAttribute">

        <androidx.cardview.widget.CardView
            android:id="@+id/header"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:weightSum="10"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_margin="8dp"
                        android:id="@+id/passportCover"
                        android:layout_width="0dp"
                        android:contentDescription="@string/app_name"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:id="@+id/name"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/expand"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_up_black_24dp"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ranking"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_margin="2dp"
                            android:text="@string/total"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/total"
                            android:textColor="@android:color/holo_green_dark"
                            android:layout_margin="2dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_margin="2dp"
                            android:text="@string/visa_free"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/visa_free"
                            android:textColor="@color/visa_free"
                            android:layout_margin="2dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_margin="2dp"
                            android:text="@string/on_arrival"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/visa_on_arrival"
                            android:textColor="@color/visa_on_arrival"
                            android:layout_margin="2dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_margin="2dp"
                            android:text="@string/eTA"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/eTa"
                            android:textColor="@color/eTa"
                            android:layout_margin="2dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_margin="2dp"
                            android:text="@string/visa_required"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/visaRequiered"
                            android:textColor="@color/visa_requiered"
                            android:layout_margin="2dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_below="@+id/header"
            android:id="@+id/swipe_to_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_below="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    </RelativeLayout>

</FrameLayout>